demos/gateway-bbr/manifests/destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: model-a-epp
  namespace: default
spec:
  host: model-a-epp.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: model-b-epp
  namespace: default
spec:
  host: model-b-epp.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
